<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_user.view.LoginUserM">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFCA28">

        <!-- Logo Section -->

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="41dp"
            android:layout_height="37dp"
            android:background="@drawable/baseline_arrow_back_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/glovo"
                android:textColor="@color/greenGlovo"
                android:textSize="48sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/location_glovo_img"
                android:src="@drawable/glovo_logo" />
        </LinearLayout>

        <!-- Login Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="569dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Hello Text -->

            <!-- Login to Continue Text -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="Evaluar Restaurante"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Email Address -->

            <!-- Password -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="Nombre Producto"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!-- Remember Me and Forgot Password -->

            <!-- Login Button -->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="Descripcion Producto"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Descripcion"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext_rounded_corners"
                android:contentDescription="@string/email_address"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="URL Imagen"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ImagenUrl"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext_rounded_corners"
                android:contentDescription="@string/email_address"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="Precio Producto"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/PrecioProducto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext_rounded_corners"
                android:contentDescription="@string/email_address"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="ID Restaurante"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Restauranteid"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_rounded_corners"
                android:ems="10"
                android:inputType="number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Or Login With Text -->
            <Button
                android:id="@+id/btnEnviarProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/greenGlovo"
                android:text="Enviar"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>