<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowGlovo">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/location_glovo_img"
        android:src="@drawable/glovo_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        tools:layout_editor_absoluteY="538dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/glovo"
        android:textColor="@color/greenGlovo"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="538dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="Dar de alta productos "
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="Nombre Restaurante"
        android:textColor="@color/greenGlovo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtNameRest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:text="Nombre Producto"
        android:textColor="@color/greenGlovo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtNameProd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="Precio"
        android:textColor="@color/greenGlovo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtPrecio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNameRest"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtPrecio2"
        android:layout_width="370dp"
        android:layout_height="148dp"
        android:layout_marginStart="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_rounded_corners"
        android:contentDescription="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="292dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descripcion"
        android:textColor="@color/greenGlovo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="292dp" />

    <TextView
        android:id="@+id/edtImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Imagen URL"
        android:textColor="@color/greenGlovo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtNameRest3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/edtNameProd"
        app:layout_constraintVertical_bias="0.516" />

    <EditText
        android:id="@+id/edtNameRest"
        android:layout_width="158dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_rounded_corners"
        android:contentDescription="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="121dp" />

    <EditText
        android:id="@+id/edtPrecio"
        android:layout_width="158dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_rounded_corners"
        android:contentDescription="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="197dp" />

    <EditText
        android:id="@+id/edtNameRest3"
        android:layout_width="158dp"
        android:layout_height="26dp"
        android:layout_marginStart="224dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_rounded_corners"
        android:contentDescription="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="197dp" />

    <EditText
        android:id="@+id/edtNameProd"
        android:layout_width="158dp"
        android:layout_height="26dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_rounded_corners"
        android:contentDescription="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtNameRest"
        tools:layout_editor_absoluteY="121dp" />

</androidx.constraintlayout.widget.ConstraintLayout>